--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  # provider: ^4.3.2+2
+  audioplayers: ^0.20.1
+  # shared_preferences: ^2.0.13
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,7 +50,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/sounds/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
